# autotools-demo

./: HINTS  Makefile.am  README  bonjour.c  configure.ac  hello.c  say.c  testfile.in
include/: demo.h
lib/: debug.c
src/: Makefile.am  common.h  hello.c
